03Jun20=======================================================================
1. Make sure that all possible regexes get passed across to the search engine.
2. Fix out of order logging on sh/log queries spanning more than one month.
3. Do not read backwards on sh/dx, reading forwards seems a 1/3 quicker. 
4. Add <ms>, <tr> and <es> shortcuts to sh/dx (e.g sh/dx <tr> on 2m).
02Jun20=======================================================================
1. Fix the small whoopsie in sh/dx.
01Jun20=======================================================================
1. Fix sh/dx iota and qra. This completes the conversion of sh/dx's limited
   "old style" parsing to using Filter style parsing with something that 
   allows expressions include brackets ( and ) as well as the 'not' keyword.
   NOTE: the precedence rules are the same as perl's '!', '||' and '&&' 
         operators.  
31May20=======================================================================
1. Improve links command layout slightly.
2. Issue an *accurate* UPGRADE.mojo with all the new packages included! 
3. Fix issue with sh/dx
30May20=======================================================================
1. Fix sh/dx! It appears that there is a long standing problem with sh/dx not
   actually return all the answers it should. I have also had a request to
   allow / enable the "not" keyword (just like the filtering system dones).

   Now this was one of the earliest modules that I wrote and it took quite
   a bit of work to tease out the important bits and then use the Filter 
   module (as in acc/spot) to generate the sh/dx filtering expressions. This
   seems to have been done. 
 
   NB This will likely not work if you are using a SQL backend to do sh/dx
   commands. This was never actually an official feature. It is now 
   deprecated.   
29May20=======================================================================
1. Please install Math::Round and Data::Structure::Util. Instructions are